# delulu-backend

./: .gitignore  creds-to-env.py  main.js  main.py  package-lock.json  prd.md  pyproject.toml  roadmap.md  test_storage.py
js/: bun.lockb  main.js  package.json  schema.js
python/: Dockerfile  deploy.sh  main.py  pyproject.toml  requirements.txt  test_imagen.py
